--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     "require": {
         "php": "^8.2",
         "blade-ui-kit/blade-heroicons": "^2.6",
+        "erusev/parsedown": "^1.7",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9"
     },
